<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="125dp"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:clickable="true"
    android:focusable="true"
    android:elevation="60dp"
    android:foreground="?android:attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/cover"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/cover"
            android:text="@string/username"
            android:textAppearance="?android:textAppearanceLarge"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/githubLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginStart="10dp"
            android:layout_marginTop="18dp"
            android:layout_toEndOf="@+id/cover"
            android:text="@string/github_link"
            android:textAppearance="?android:textAppearanceLarge"
            android:textSize="20sp"
            android:textStyle="bold" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>